--- a/web/neurouter/package.json
+++ b/web/neurouter/package.json
@@ -10,7 +10,6 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
-    "@radix-ui/themes": "^3.2.1",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
     "@radix-ui/react-aspect-ratio": "1.1.1",
@@ -38,6 +37,7 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
+    "@radix-ui/themes": "^3.2.1",
     "@vitejs/plugin-react": "latest",
     "autoprefixer": "^10.4.20",
     "axios": "latest",
@@ -61,7 +61,7 @@
     "react-i18next": "latest",
     "react-resizable-panels": "^2.1.7",
     "react-router-dom": "latest",
-    "recharts": "2.15.0",
+    "recharts": "^2.15.3",
     "sass": "latest",
     "sass-embedded": "latest",
     "sonner": "^1.7.1",
